@@ -13,6 +13,8 @@ import org.springframework.context.annotation.Configuration;
 
 import javax.sql.DataSource;
 
+import org.h2.tools.Server;
+
 import static gbench.util.data.xls.SimpleExcel.xls;
 import static gbench.util.jdbc.Jdbcs.imports;
 import static gbench.util.lisp.IRecord.REC;
@@ -22,16 +24,34 @@ import static gbench.webapps.mymall.api.model.DataModel.*;
 public class DataAppConfig {
 
 	/**
+	 * 
+	 * @param port
+	 */
+	static void startH2Server(long port) {
+		try {
+			Server.createTcpServer( // 2. 关键：启动 TCP 服务，允许外部连接
+					"-tcpAllowOthers", // 允许外部连接（非 localhost）
+					"-tcpPort", String.valueOf(port), // 指定端口
+					"-ifNotExists" // 如果服务已存在则不报错
+			).start();
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+	}
+
+	/**
 	 * @return
 	 */
 	@Bean
-	public DataSource dataSource(@Value("${gbench.jdbc.driver:org.h2.Driver}") String driver, //
-			@Value("${gbench.jdbc.url:jdbc:h2:mem:hitler;mode=mysql;db_close_delay=-1;database_to_upper=false;}") String url, //
-			@Value("${gbench.jdbc.user:sa}") String user, //
-			@Value("${gbench.jdbc.password:}") String password //
+	public DataSource dataSource(@Value("${gbench.mymall.api.data.jdbc.driver:org.h2.Driver}") String driver, //
+			@Value("${gbench.mymall.api.data.jdbc.url:jdbc:h2:mem:hitler;mode=mysql;db_close_delay=-1;database_to_upper=false;}") String url, //
+			@Value("${gbench.mymall.api.data.jdbc.user:sa}") String user, //
+			@Value("${gbench.mymall.api.data.jdbc.password:}") String password, //
+			@Value("${gbench.mymall.api.data.jdbc.port:9092}") long port //
 	) {
 		final var db_rec = IRecord.rb("driver,url,user,password").get(driver, url, user, password);
-
+		System.out.println("---------------\n[dataSource URL:%s, port:%s]\n-----------------\n".formatted(url, port));
+		startH2Server(port);
 		return MyDataApp.ds(db_rec.toArray2());
 	}
 
@@ -45,7 +65,7 @@ public class DataAppConfig {
 	 */
 	@Bean
 	public MyDataApp dataApp(final DataSource ds, final @Value("${gbench.dbreset:true}") Boolean dbreset,
-			final @Value("${gbench.datafile:F:/slicef/ws/gitws/malonylcoa/src/test/java/gbench/webapps/world/api/model/data/datafile.xlsx}") String datafile) {
+			final @Value("${gbench.datafile:F:/slicef/ws/gitws/malonylcoa/src/test/java/gbench/webapps/mymall/api/model/data/datafile.xlsx}") String datafile) {
 
 		final var dataApp = new MyDataApp(ds);
 		if (dbreset) {
@@ -75,15 +95,18 @@ public class DataAppConfig {
 	 * @return 财务会计数据库
 	 */
 	@Bean
-	public IMySQL jdbcApp(
-			@Value("${gbench.finance.acct.datafile:F:/slicef/ws/gitws/malonylcoa/src/test/java/gbench/webapps/mymall/api/model/data/acct_data.xlsx}") String datafile,
-			@Value("${gbench.finance.acct.sqlfile:F:/slicef/ws/gitws/malonylcoa/src/test/java/gbench/webapps/mymall/api/model/sqls/acct.sql}") String sqlfile) {
-		// 共享静态变量便于测试应用进行本地化修改与测试:建立一个静态块给予重新赋值就可以了
-		final String db = "myacct"; // 数据库名
+	public IMySQL jdbcApp(@Value("${gbench.mymall.api.finance.acct.jdbc.driver:org.h2.Driver}") String driver, //
+			@Value("${gbench.mymall.api.finance.acct.jdbc.url:jdbc:h2:mem:hitler;mode=mysql;db_close_delay=-1;database_to_upper=false;}") String url, //
+			@Value("${gbench.mymall.api.finance.acct.jdbc.user:sa}") String user, //
+			@Value("${gbench.mymall.api.finance.acct.jdbc.password:}") String password, //
+			@Value("${gbench.mymall.api.finance.acct.jdbc.port:9091}") long port, //
+			@Value("${gbench.mymall.api.finance.acct.datafile:F:/slicef/ws/gitws/malonylcoa/src/test/java/gbench/webapps/mymall/api/model/data/acct_data.xlsx}") String datafile,
+			@Value("${gbench.mymall.api.finance.acct.sqlfile:F:/slicef/ws/gitws/malonylcoa/src/test/java/gbench/webapps/mymall/api/model/sqls/acct.sql}") String sqlfile) {
 		final var datafileXls = xls(datafile); // 数据-源文件
-		final var url = String.format("jdbc:h2:mem:%s;mode=mysql;db_close_delay=-1;database_to_upper=false;", db); // h2连接字符串
-		final var h2_rec = gbench.util.jdbc.kvp.IRecord.REC("url", url, "driver", "org.h2.Driver", "user", "root",
-				"password", "123456"); // h2数据库
+		final var h2_rec = gbench.util.jdbc.kvp.IRecord.REC("url", url, "driver", driver, "user", user, "password",
+				password); // h2数据库
+		System.out.println("---------------\n[dataSource URL:%s, port:%s]\n-----------------\n".formatted(url, port));
+		startH2Server(port);
 		final var jdbcApp = IJdbcApp.newNsppDBInstance(sqlfile, IMySQL.class, h2_rec); // 数据库应用客户端
 		final var tables = datafileXls.sheetS().map(e -> e.getSheetName()).toArray(String[]::new); // 基础数据表
 		jdbcApp.withTransaction(
